update rules and swagger setup
